--- a/public/_locales/ko/messages.json
+++ b/public/_locales/ko/messages.json
@@ -1,9 +1,9 @@
 {
   "APP_NAME": {
-    "message": "<앱 이름>"
+    "message": "분석하는 컬멍이"
   },
   "APP_DESCRIPTION": {
-    "message": "<앱 설명>"
+    "message": "마켓컬리 실시간 사용자 데이터를 조회하고 추천 API를 바로 추가하여 사용자에게 더 좋은 추천을 할 수 있게 해주는 확장앱입니다."
   },
   "SETTING": {
     "message": "설정"
